Hide homepage banner on small screens, finish extending docs, various other misc. fixes

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -59,3 +59,10 @@ h1 {
     padding: 2rem;
   }
 }
+
+
+@media screen and (max-width: 900px) {
+  .heroBanner {
+    display: none;
+  }
+}
